--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,10 @@
   "description": "Search For Kits App backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "pretest": "npm run lint",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Carter Bancroft",
   "license": "ISC",
@@ -12,6 +15,8 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "eslint": "^8.36.0"
+    "eslint": "^8.36.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5"
   }
 }
